force-app/main/default/objects/custom_create332__c/custom_create332__c.object-meta.xml
<CustomObject>
    <label>Custom created object332</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects332</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>