force-app/main/default/objects/custom_create332__c/fields/custom_create_332field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_332field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 332field501</label>
    <type>Checkbox</type>
</CustomField>